--- a/index.qmd
+++ b/index.qmd
@@ -78,4 +78,5 @@ scatterplot
 ## **PDF Full Report**
 
 Utilize the link below to download a full PDF report of this analysis.
-\[Download PDF\](OSA_Clinical_Trials.pdf){target="\_blank"}
+
+\[Download PDF\](https://raw.githubusercontent.com/TylerJGallagher/Final/main/OSA_Clinical_Trials.pdf){target="\_blank"}
