--- a/index.qmd
+++ b/index.qmd
@@ -79,4 +79,4 @@ scatterplot
 
 Utilize the link below to download a full PDF report of this analysis.
 
-\[Download PDF\](https://raw.githubusercontent.com/TylerJGallagher/Final/main/OSA_Clinical_Trials.pdf){target="\_blank"}
+\[Download PDF\](https://raw.githubusercontent.com/TylerJGallagher/Final/main/OSA_Clinical_Trials.pdf){target='\_blank'}
