--- a/index.qmd
+++ b/index.qmd
@@ -77,4 +77,4 @@ scatterplot
 
 ## **PDF Full Report**
 
-Utilize the link below to download a full PDF report of this analysis.\<a href="http://raw.githubusercontent.com/TylerJGallagher/Final/main/OSAClinical_Trials.pdf"\> Something \</a\>
+Utilize the link below to download a full PDF report of this analysis.[PDF Link](https://github.com/TylerJGallagher/Final/blob/main/OSA_Clinical_Trials.pdf)
